--- a/src/mca/Project.toml
+++ b/src/mca/Project.toml
@@ -13,6 +13,8 @@ InspectDR = "d0351b0e-4b05-5898-87b3-e2a8edfddd1d"
 Interpolations = "a98d9a8b-a2ab-59e6-89dd-64a1c18fca59"
 LibSerialPort = "a05a14c7-6e3b-5ba9-90a2-45558833e1df"
 NumericIO = "6c575b1c-77cb-5640-a5dc-a54116c90507"
+OmronD6FPH = "c57aa17a-835b-45aa-83d3-6d56014591bd"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
+PyCall = "438e738f-606a-5dbb-bf0a-cddfbfd45ab0"
 Reactive = "a223df75-4e93-5b7c-acf9-bdd599c0f4de"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
